# arc_hack

./: .gitignore  final_test.py  test_components.py  test_pipeline.py
arc_solution/: README.md  STATUS_REPORT.md  pyproject.toml  requirements.txt  test_integration.py  test_pipeline.py  test_vision_llm.py
arc_solution/data/: README.md
arc_solution/experiments/: advanced_analysis.py  basic_pipeline_test.py
arc_solution/models/: README.md  neural_models.py
arc_solution/notebooks/: 01_data_exploration.ipynb
arc_solution/src/core/: pipeline.py  preprocessor.py  types.py
arc_solution/src/data/: loader.py
arc_solution/src/dsl/: primitives.py  program_synthesizer.py
arc_solution/src/execution/: executor.py
arc_solution/src/experiments/: runner.py
arc_solution/src/hypothesis_generators/: symbolic_solver.py
arc_solution/src/kaggle/: submission.py
arc_solution/src/llm_reasoning/: llm_reasoner.py
arc_solution/src/verification/: verifier.py
arc_solution/src/vision/: vision_solver.py
arc_solution/test_submissions/: test_submission.json  test_submission.metadata.json
arc_solution/tests/: test_basic.py
resources/: hack_insight.md  hack_overview.md  hack_spec.md
