[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-solution"
version = "1.0.0"
description = "ARC Prize 2025 - Multi-Agent Neuro-Symbolic Reasoning System"
authors = [
    {name = "ARC Prize Team", email = "team@arcprize.com"}
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "opencv-python>=4.8.0",
    "scikit-image>=0.21.0",
    "networkx>=3.1.0",
    "z3-solver>=4.12.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
]
requires-python = ">=3.9"
license = {text = "Proprietary"}

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]
ml = [
    "wandb>=0.16.0",
    "optuna>=3.4.0",
    "jupyter>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
